--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,211 +4,182 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/book.css">
     <script src="script.js"></script>
     <title>NITC GUEST MANAGEMENT</title>
+    </script>
 </head>
-<body>
-
-    <!-- nav bar -->
-    <section id="date_select">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-        <nav class="navbar navbar-inverse navbar-expand-lg navbar-fixed-top">
+<body style="font-family: 'Roboto Slab', serif;">
+  <header class="header">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-              <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                  <span class="sr-only"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>                        
-                </button>
-                 <a class="navbar-brand" href="#"></a> 
-              </div>
-              <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">About</a></li>
-                  <li><a href="#">Contact</a></li>
+              <a class="navbar-brand" href="#">
+                <img src="images/logo.jpg" alt="logo" style="width: 50px; height: 50px; border-radius: 50%;"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                  
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Rooms</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                  </li>
                 </ul>
-                {{!-- <ul class="nav navbar-nav navbar-right">
-                  <li><a href="user"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-                </ul> --}}
-                {{#if removedUser}}
-                    <ul class="nav navbar-nav navbar-right">
-    
-                        {{!-- <li> <span class="navbar-text"></span>{{this.removedUser}}</li> --}}
-                        <li>
-                            <button class="btn btn-sm btn-outline-primary" type="button"><a href="/logout" style="width:auto;" aria-current="page"> Logout</a></button>
-                        </li>
-                    </ul>
-                {{else}}
-                    <ul class="nav navbar-nav navbar-right">
-             
-                        <li><a href="user"><span class="glyphicon glyphicon-user"></span> Login /SignUp</a>
-                        </li>
-                        
-                    </ul>
-                {{/if}}
-
+                <ul class="navbar-nav ms-auto">
+                    <button class="btn btn-primary"><img src="images/loginlogo.png" style="width:20px; height:25px; border-radius:100%; margin-right: 10px;" alt="sign up">Login</button> 
+                </ul>
               </div>
             </div>
           </nav>
-
-          
-
-<!--     
-    <section id="date_select">
-        <nav class="navbar bg-transparent navbar-expand-lg navbar-light fixed-top">
-            
-            <div class="container-fluid">
-                <a class="navbar-brand"><img src="images/logo.jpg" alt="logo" width="80" height="80"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav position-absolute top-50 start-50 translate-middle">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active hover:text-grey-900" aria-current="page" href="">About</a>
-                        </li>
-                        
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="collapse navbar-collapse nav justify-content-end" id="#navbarNavDropdown">
-                    <!-- {{#if removedUser}} -->
-                    <!-- <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active"  href="/logout" style="width:auto;" aria-current="page">Hello {{this.removedUser}} </br>Logout</a>
-                        </li>
-                    </ul>
-                    <!-- {{else}} -->
-                    <!-- <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/user" style="width:auto;" aria-current="page"><img src="images/login.png" alt="Login" width="35" height="35"></a>
-                        </li>
-                    </ul> -->
-                <!--{{/if}} -->
-                <!-- </div>
-            </div>
-
-        </nav> -->
-
-
-    <!-- </section> -->
-    {{!-- <div id="id01" class="modal">
-        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">×</span>
-        <form class="modal-content animate" action="/action_page.php">
-            <div class="container">
-                <label><b>Email</b></label>
-                <input type="text" placeholder="Enter Email" name="email" required>
- 
-                <label><b>Password</b></label>
-                <input type="password" placeholder="Enter Password" name="psw" required>
- 
-                <label><b>Repeat Password</b></label>
-                <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-                <input type="checkbox"> Remember me
-                <div class="clearfix">
-                    <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-                    <button type="submit" class="signupbtn">Sign Up</button>
-                </div>
-            </div>
-        </form>
-    </div> --}}
- 
-<br>
-
-    <br>
-<!--for searching-->
-<!-- <div class="row justify-content-center"> -->
-    <!-- <section id="date_select"> -->
-        <div id="booking" class="sections">
-            <div class="section-center">
-                <div class="container">
-                    <div class="row">
-                        <div class="booking-form">
-                            <form>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group"> <input class="form-control" type="date" required> <span class="form-label">Check In</span> </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group"> <input class="form-control" type="date" required> <span class="form-label">Check out</span> </div>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group"> <input class="form-control" type="number" placeholder="No. of rooms" required> <span class="form-label">No. of rooms</span> </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group"> <input class="form-control" type="number" placeholder="No. of guests" required> <span class="form-label">No. of guests</span> </div>
-                                    </div>
-                                </div>
-                                <div class="form-btn"> <button class="submit-btn">SEARCH</button> </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </section>
-
-    <!--types of rooms-->
-    <section id="type_of_rooms" style="margin-top: 75px; margin-bottom:35px;">
-           
-           {{#ifEquals value "logout"}}
-                {{!-- <script> --}}
-                    {{!-- alert("Signed up successfully"); --}}
-                        <div class="alert alert-warning alert-dismissible show " role="alert">
-                        <strong>User has been removed.</strong>
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                {{!-- </script> --}}
-                {{/ifEquals}}
-
-
-        <h2 class="text-center">TYPES OF ROOMS</h2>
+    </header>
+    
+    <div id="booking" class="section">
+		<div class="section-center">
+			<div class="container">
+				<div class="row">
+          <div class="col-md-4 col-md-pull-7" style="margin: 30px 15px 30px 30px">
+						<div class="booking-form">
+							<form>
+								<div class="row">
+									<div class="col-sm-6">
+										<div class="form-group">
+											<span class="form-label">Check In</span>
+											<input class="form-control" type="date" required>
+										</div>
+									</div>
+									<div class="col-sm-6">
+										<div class="form-group">
+											<span class="form-label">Check out</span>
+											<input class="form-control" type="date" required>
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm-6">
+										<div class="form-group">
+											<span class="form-label">Rooms</span>
+											<select class="form-control">
+												<option>No. of rooms</option>
+												<option>1</option>
+												<option>2</option>
+												<option>3</option>
+												<option>4</option>
+												
+											</select>
+											<span class="select-arrow"></span>
+										</div>
+									</div>
+									<div class="col-sm-6">
+										<div class="form-group">
+											<span class="form-label">Guest count</span>
+											<select class="form-control">
+												<option>No. of guests</option>
+												<option>1</option>
+												<option>2</option>
+												<option>3</option>
+												<option>4</option>
+												<option>5</option>
+											</select>
+											<span class="select-arrow"></span>
+										</div>
+									</div>
+								</div>
+								<div class="form-btn">
+									<center><button class="submit-btn">Check availability</button></center>
+								</div>
+							</form>
+						</div>
+					</div>
+					<div class="col-md-7 col-md-push-5">
+						<div class="booking-cta" style="margin: 30px 20px 30px 30px">
+							<h1>Make your reservation</h1>
+							<table class="table">
+								<thead>
+									<th>Hostels</th>
+									<th>Room</th>
+									<th>Amount</th>
+								</thead>
+								<tr>
+									<td><strong>International Hostel</strong></td>
+									<td><strong>3 bedded</strong></td>
+									<td><strong>450/day</strong></td>			
+								</tr>
+								<tr>
+									<td><strong>G Hostel</strong></td>
+									<td><strong>2 bedded</strong></td>
+									<td><strong>250/day</strong></td>			
+								</tr>
+								<tr>
+									<td><strong>PG-2</strong></td>	
+									<td><strong>2 bedded</strong></td>
+									<td><strong>250/day</strong></td>			
+								</tr>
+								<tr>
+									<td><strong>SAC</strong></td>					
+									<td><strong>2 bedded</strong></td>
+									<td><strong>250/day</strong></td>			
+								</tr>
+							</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+    <section id="type_of_rooms" style="margin-bottom:25px;">
+      <h2 class="text-center">TYPES OF ROOMS</h2>
         <br>
         <br>
         <div class="container">
             <div class="row row-cols-2 row-cols-lg-4">
                     {{#each rows}}
-                <div class="col"> <a id="1bed" href=""><img class="img-thumbnail" src="images/{{this.Imagepath}}.jpg" alt="room1" style="width: 600px; height:200px;" ></a>
-                   <label id="1bed">{{this.Name}}</label> </br>
-                   <label id="1bed">{{this.Price}}</label>
+                <div class="col"> <a id="1bed" href=""><img class="img-thumbnail" src="images/{{this.Imagepath}}.jpg" alt="room1" style="width: 600px; height:200px; border-radius:10%;" ></a>
+                   <label id="1bed"><strong>{{this.Name}}</strong></label> </br>
+                   <label id="1bed"><strong>{{this.Price}}</strong></label>
                 </div>
-                {{!-- <div class="col"><a id="2bed" href=""><img class="img-thumbnail" src="images/room2.jpg" alt="room2" style="width:600px; height:200px;"></a>
-                                 <label id="2bed">One bed</label>
-                </div>
-                <div class="col"><a  id="" href=""><img class="img-thumbnail" src="images/room3.jpg" alt="room3" style="width: 600px; height:200px;"></a>
-                                 <label id="1bed">One bed</label>
-                </div>
-                <div class="col"><a id="" href=""><img class="img-thumbnail" src="images/room4.jpg" alt="room4"  style="width:600px; height:200px;"> </a>
-                                 <label id="1bed">One bed</label>
-                </div> --}}
                 {{/each}}
             </div>
         </div>
     </section>
-    <br>
-
-    <!--footer-->
+    </section>
+    {{!-- slideshow --}}
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel" style="margin: 78px;">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-interval="500">
+            <img src="images/3.png" class="d-block w-100" alt="..." style="height:300px">
+          </div>
+          <div class="carousel-item" data-interval="500">
+            <img src="images/2.jpg" class="d-block w-100" alt="..." style="height:300px">
+          </div>
+          <div class="carousel-item" data-interval="500">
+            <img src="images/1.png" class="d-block w-100" alt="..." style="height:300px">
+          </div>
+          <div class="carousel-item" data-interval="500">
+            <img src="images/4.jpg" class="d-block w-100" alt="..." style="height:300px">
+          </div>
+        </div>
+      </div>
+    {{!-- FOOTER --}}
     <section id="footer">
         <div class="bg-dark text-light">
             <div class="row row-cols-2 row-cols-lg-2">
                 <div class="col text-center py-5"><h2>National Institute of Technology Calicut</h2></div>
             <div class="col">
+                <br>
                 <p>Chief Warden: 0495-2285454</p>
                 <p>Hostel Office: 0495-2285208</p>
                 <p>Manager: 0495-2287238</p>
@@ -216,5 +187,6 @@
              </div>
         </div>
    </section>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
 </body>
 </html>
